--- a/dot_config/empty_starship.toml
+++ b/dot_config/empty_starship.toml
@@ -1,8 +1,65 @@
 # ~/.config/starship.toml
-add_newline = true
-format = "$directory$git_branch$character"
+# -- Minimal, colorful, and elegant PowerShell theme --
 
+add_newline = true
+format = """
+[](color_blue)\
+$directory\
+[](bg:color_purple fg:color_blue)\
+$git_branch\
+$git_status\
+[](fg:color_purple bg:color_orange)\
+$kubernetes\
+[](fg:color_orange bg:color_bg)\
+$time\
+[ ](fg:color_bg)
+$character
+"""
+
+# Define custom palette
+palette = "custom"
+
+[palettes.custom]
+color_blue   = "#1E88E5"
+color_purple = "#8E24AA"
+color_orange = "#FB8C00"
+color_bg     = "#1E1E2E"
+color_fg     = "#D8DEE9"
+
+# Directory module
+[directory]
+style = "bg:color_blue fg:white bold"
+read_only = "🔒"
+truncation_length = 3
+truncate_to_repo = false
+format = "[$path]($style)[$read_only]($style)"
+
+# Git branch and status
+[git_branch]
+symbol = ""
+style = "bg:color_purple fg:white"
+format = " [$symbol $branch]($style) "
+
+[git_status]
+style = "bg:color_purple fg:white"
+format = "[$all_status$ahead_behind]($style)"
+
+# Kubernetes context (optional)
+[kubernetes]
+symbol = "☸"
+style = "bg:color_orange fg:white"
+disabled = false
+format = " [$symbol $context]($style)"
+
+# Time module (optional, right segment)
+[time]
+disabled = false
+time_format = "%H:%M"
+style = "bg:color_bg fg:color_fg"
+format = " 🕒 [$time]($style)"
+
+# Prompt character
 [character]
 success_symbol = "[❯](bold green)"
-error_symbol = "[❯](bold red)"
-vicmd_symbol = "[❮](bold yellow)"
+error_symbol   = "[❯](bold red)"
+vicmd_symbol   = "[❮](bold yellow)"
