--- a/.chezmoiignore
+++ b/.chezmoiignore
@@ -1,5 +1,6 @@
 README.md
+Documents/*
 
-{{- if ne .chezmoi.os "windows" -}}
-Documents/PowerShell/**
-{{- end -}}
+{{- if eq .chezmoi.os "windows" }}
+!Documents/*PowerShell/ # ignore a folder, except for Windows PowerShell profiles
+{{- end }}
