--- a/.chezmoiignore
+++ b/.chezmoiignore
@@ -1,7 +1,6 @@
 README.md
+
+{{- if ne .chezmoi.os "windows" }}
 Documents
 Documents/*
-
-{{- if eq .chezmoi.os "windows" }}
-!Documents/*PowerShell/ # ignore a folder, except for Windows PowerShell profiles
 {{- end }}
