--- a/home/private_AppData/Local/Microsoft/Windows Terminal/settings.json
+++ b/home/private_AppData/Local/Microsoft/Windows Terminal/settings.json
@@ -34,6 +34,7 @@
     {
         "defaults": 
         {
+            "colorScheme": "Dark+",
             "font": 
             {
                 "face": "FiraCode Nerd Font Mono"
