--- a/home/private_AppData/Local/Microsoft/Windows Terminal/settings.json
+++ b/home/private_AppData/Local/Microsoft/Windows Terminal/settings.json
@@ -35,7 +35,7 @@
     {
         "defaults": 
         {
-            "colorScheme": "Solarized Dark",
+            "colorScheme": "One Half Dark",
             "font": 
             {
                 "face": "FiraCode Nerd Font Mono"
