--- a/home/.chezmoiignore
+++ b/home/.chezmoiignore
@@ -11,3 +11,11 @@ Documents/*
 *.sh
 **/*/*.sh
 {{- end }}
+
+{{ if ne .chezmoi.os "linux" }}
+.chezmoiscripts/linux/**
+{{- end }}
+
+{{ if ne .chezmoi.os "windows" }}
+.chezmoiscripts/windows/**
+{{- end }}
