--- a/.editorconfig
+++ b/.editorconfig
@@ -1,15 +1,16 @@
 ; https://editorconfig.org/
 
-root = true
-
 [*]
-indent_style = space
 indent_size = 2
+indent_style = space
 end_of_line = lf
 charset = utf-8
-trim_trailing_whitespace = true
 insert_final_newline = true
+trim_trailing_whitespace = true
 
 [*.md]
 indent_size = 4
 trim_trailing_whitespace = false
+
+[*.py]
+indent_size = 4
