Update AppData/Local/Microsoft/VSCode/settings.json Update AppData/Local/Microsoft/Windows Terminal/settings.json

--- a/home/private_AppData/Local/Microsoft/VSCode/settings.json
+++ b/home/private_AppData/Local/Microsoft/VSCode/settings.json
@@ -12,4 +12,5 @@
         "editor.defaultFormatter": "esbenp.prettier-vscode"
     },
     "chat.mcp.access": "all",
+    "redhat.telemetry.enabled": false,
 }
