--- a/home/private_AppData/Local/Microsoft/Windows Terminal/settings.json
+++ b/home/private_AppData/Local/Microsoft/Windows Terminal/settings.json
@@ -35,6 +35,11 @@
     {
         "defaults": 
         {
+            "bellStyle": 
+            [
+                "window",
+                "taskbar"
+            ],
             "colorScheme": "One Half Dark",
             "font": 
             {
