Update .chezmoiignore Add .claude/skills/1password/SKILL.md Add .claude/skills/1password/references/op_cli_reference.md Add .claude/skills/1password/scripts/check_auth.sh Add .claude/skills/1password/scripts/get_secret.sh Add .claude/skills/1password/scripts/list_items.sh Add .claude/skills/ssh/SKILL.md Add .claude/skills/ssh/references/config.md Add .claude/skills/ssh/references/examples.md Add .claude/skills/ssh/references/security.md Add .claude/skills/ssh/scripts/scp_transfer.py Add .claude/skills/ssh/scripts/ssh_exec.py Add .claude/skills/ssh/scripts/ssh_multi.py

--- a/home/.chezmoiignore
+++ b/home/.chezmoiignore
@@ -4,6 +4,14 @@ README.md
 .config/op/
 .config/op/**
 
+# Claude (default: ignore all runtime state)
+.claude/**
+!.claude/
+!.claude/skills/**
+!.claude/settings.json
+!.claude/plugins/installed_plugins.json
+!.claude/plugins/known_marketplaces.json
+
 {{ if ne .chezmoi.os "linux" }}
 *.sh
 **/*/*.sh
