--- a/home/private_AppData/Local/Microsoft/VSCode/settings.json
+++ b/home/private_AppData/Local/Microsoft/VSCode/settings.json
@@ -13,5 +13,8 @@
     },
     "chat.mcp.access": "all",
     "editor.fontFamily": "FiraCode Nerd Font Mono",
-    "redhat.telemetry.enabled": false
+    "redhat.telemetry.enabled": false,
+    "security.allowedUNCHosts": [
+        "nas.lan.home.vwn.io"
+    ]
 }
